--- a/src/components/MovieTop.css
+++ b/src/components/MovieTop.css
@@ -57,7 +57,6 @@
     rgba(0, 0, 0, 0.2) 0%,
     rgba(0, 0, 0, 0.85) 100%
   );
-  /*  background-color: black; */
   filter: blur(10px);
   background-blend-mode: multiply;
 }
@@ -102,9 +101,11 @@
 .movie_content h5 {
   font-size: 2rem;
   text-transform: uppercase;
+  font-weight: 600;
 }
 .movie_content .content_wrap {
   color: #cacaca;
+  font-weight: 300;
 }
 .movie_content .content_wrap span {
   display: block;
@@ -115,9 +116,13 @@
 }
 .movie_content .content_wrap li {
   margin-right: 10px;
+  
 }
 .movie_content .content_wrap p {
-  color: #f6f6f6;
+  color: #e6e6e6;
   font-size: 1.2rem;
   line-height: 1.7;
+  font-family: 'Inter',sans-serif;
+  font-weight: 400;
+ 
 }
