--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,8 +1,9 @@
 .movies {
 	display: grid;
-	grid-template-columns: repeat(5, minmax(210px , 1fr));
+	grid-template-columns: repeat(5, minmax(20% , 1fr));
+	grid-template-rows: repeat(4, minmax(25%,1fr));
+	grid-template-rows: 1.05fr 1fr 1fr 1fr;
 	grid-gap: 0;
-	/* width: 80%; */
 	max-width: 1200px;
 	margin: auto;
 }
