--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -7,3 +7,12 @@
 	max-width: 1200px;
 	margin: auto;
 }
+.loader {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 300;
+	font-size: 2rem;
+}
