--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,68 +2,24 @@
   position: fixed;
   left: 5%;
   width: 50px;
-  height: 50px;
+  height: 100px;
   border-radius: 50px;
-  background: rgb(210, 210, 210);
-  bottom: 100px;
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
+  background: #898989;
+  background: #383838;
+  bottom: 50px;
+  padding: 10px 0;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px #d7d7d706;
   z-index: 2000;
 }
+.nav .icons {
+  text-align: center;
+  /* padding: 10px 0; */
+}
 .nav a {
   display: block;
-  font-size: 2rem;
-  text-indent: -22222222px;
+  line-height: 2.5;
 }
-.nav i {
-  display: block;
-  color: #6c6c6c;
-}
-.arrow {
-  width: 50px;
-  height: 50px;
-  border: none;
-  background: none;
-  position: relative;
-  display: inline-block;
-}
-.arrow::before {
-  top: 5px;
-  right: 10px;
-  width: 20px;
-  height: 20px;
-  content: "";
-  position: absolute;
-  transform: rotate(-225deg);
-  box-shadow: 2px 2px 0 #493d3f, 3px 2px 0 #493d3f, 2px 3px 0 #493d3f,
-    3px 3px 0 #493d3f;
-}
-.arrow::after {
-  width: 0;
-  height: 0;
-  left: -1px;
-  bottom: 50%;
-  content: "•";
-  color: #493d3f;
-  line-height: 0;
-  font-size: 14px;
-  position: absolute;
-  transition: left 0.1s ease-out, bottom 0.1s ease-out,
-    letter-spacing 0.1s ease-out;
-}
-.arrow:hover,
-.arrow:focus {
-  outline: none;
-}
-.arrow:hover::after,
-.arrow:focus::after {
-  left: 1px;
-}
-.arrow:hover.-long::after,
-.arrow:focus.-long::after {
-  left: -0.19em;
-  letter-spacing: 0.1em;
+svg:hover {
+  fill: #ef5959;
 }
