--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,18 +1,30 @@
 .movies {
-	display: grid;
-	grid-template-columns: repeat(5, minmax(20% , 1fr));
-	grid-template-rows: repeat(4, minmax(25%,1fr));
-	grid-template-rows: 1.05fr 1fr 1fr 1fr;
-	grid-gap: 0;
-	max-width: 1200px;
-	margin: auto;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(20%, 1fr));
+  grid-template-rows: 1.05fr 1fr 1fr 1fr;
+  grid-gap: 0;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
 }
 .loader {
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-weight: 300;
-	font-size: 2rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 1090px) {
+  .movie_intro {
+    width: 500px;
+    margin: auto;
+  }
+  .movies {
+    grid-template-columns: repeat(2, minmax(50%, 1fr));
+    max-width: 500px;
+    margin: auto;
+  }
 }
