--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -19,6 +19,12 @@
 .movie .movie_card a img {
 	width: 100%;
 }
+.movie .icon_heart {
+	position: absolute;
+	right: 0;
+	padding-top: 5px;
+	padding-right: 5px;
+}
 .movie .movie_label {
 	width: 100%;
 	bottom: -10px;
